--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,7 +1,16 @@
+fastapi
+uvicorn
+pymongo
+redis
+docker
+chromadb
+requests
+python-dotenv
+openai
+google-genai
 discord.py>=2.4.0
-git+https://github.com/imayhaveborkedit/discord-ext-voice-recv.git
+git+https://github.com/imayhaveborkedit/discord-ext-voice-recv.git@main
 aiohttp
 numpy
 scipy
 pynacl
-redis
