Updated DB Data and Bot Functions

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,8 @@
 # ===============================================================
 # Script Name: Dockerfile
 # Script Location: /opt/RealmQuest/api/Dockerfile
-# Date: 2026-01-26
-# Version: 18.9.0
-# About: Hard-coded Model Cache to prevent boot loops
+# Date: 2026-01-27
+# Version: 18.9.4 (Fixes Volume Trap)
 # ===============================================================
 
 FROM python:3.11-slim
@@ -26,20 +25,21 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# --- OPTIMIZATION: FORCE MODEL PERSISTENCE ---
-# We set the cache directory explicitly so it survives the build
+# --- OPTIMIZATION: PERSISTENT CACHE POINTERS ---
 ENV SENTENCE_TRANSFORMERS_HOME=/app/data/cache
 ENV TRANSFORMERS_CACHE=/app/data/cache
 ENV HF_HOME=/app/data/cache
 
-# Create dir and Pre-download the model into the image
-RUN mkdir -p /app/data/cache && \
-    python3 -c "import chromadb.utils.embedding_functions as ef; ef.DefaultEmbeddingFunction()"
+# --- NEW: PACK MANAGEMENT TOOLS ---
+RUN pip install --no-cache-dir redis pymongo chromadb sentence-transformers
+
+# --- THE FIX: COPY TO ROOT (Avoids Volume Overwrite) ---
+COPY packs_bundle /packs
+# -------------------------------------------------------
 
 # Copy Source Code
 COPY . .
 
 EXPOSE 8000
 
-# CMD: Crucial! Host must be 0.0.0.0 to be visible outside Docker
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
